# pyodide-chat-gpt

./: Makefile  README.md  pyproject.toml
src/: core.py  data.1  data.2  decrypt.py  install_dependencies.py  main.py
static/html/: index.html
static/js/: python.js
